<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nextButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


<ImageView
    android:id="@+id/Background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/background"
    android:scaleType="centerCrop"
    android:src="@drawable/color_cloud"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_text_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="Username"
        android:background="@drawable/rounded_background_login"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:padding="15dp"
        android:rotation="0"
        android:shadowColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <EditText
        android:id="@+id/password_text_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:autofillHints="Password"
        android:background="@drawable/rounded_background_login"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <EditText
    android:id="@+id/email_text_login"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:autofillHints="Email"
    android:background="@drawable/rounded_background_login"
    android:ems="10"
    android:gravity="center"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:padding="15dp"
    android:rotation="0"
    android:shadowColor="#000000"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.503"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.435" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_background_login"
        android:insetTop="6dp"
        android:insetBottom="0dp"
        android:text="@string/create_account"
        app:backgroundTint="#7777FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <ImageView
    android:id="@+id/login"
    android:layout_width="171dp"
    android:layout_height="161dp"
    android:contentDescription="@string/todo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.097"
    app:srcCompat="@drawable/log_in" />

</androidx.constraintlayout.widget.ConstraintLayout>